src/test/deca/context/invalid/new-boolean.deca
// Description:
//    Condition de la règle 3.42 non respectée 
//
// Resultats:
//    Erreur Contextuelle
//    Ligne 10 : New is only for classes
//

{
    boolean a = new boolean();
}
